написал фронт для входа менеджерам

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,11 +27,11 @@
 
             <div class="change-theme-block">
                 <button class="moon-logo-btn">
-                    <img src="/static/icons/moonLight.svg" alt="Луна" class="moonLogo">
+                    <img src="/static/icons/miniApp/moonLight.svg" alt="Луна" class="moonLogo">
                 </button>
             
                 <button class="sun-logo-btn">
-                    <img src="/static/icons/sunLight.svg" alt="Солнце" class="sunLogo">
+                    <img src="/static/icons/miniApp/sunLight.svg" alt="Солнце" class="sunLogo">
                 </button>
                 <div class="highlight-block-theme"></div>
             </div>
@@ -39,7 +39,7 @@
         
         <nav>
             <div class="logo-container">
-                <img src="/static/icons/кибераура2.svg" alt="Логотип" class="logo">
+                <img src="/static/icons/miniApp/кибераура2.svg" alt="Логотип" class="logo">
             </div>
 
             <div class="nav-buttons">
