--- a/templates/staffLogin.html
+++ b/templates/staffLogin.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="logo-container">
+<div class="logo-container-log">
     <img src="{{ url_for('static', filename='icons/staffLogin/cybaraura2.svg') }}" alt="Логотип">
 </div>
 <form action="" class="login-form">
