--- a/templates/staffLogin.html
+++ b/templates/staffLogin.html
@@ -8,12 +8,23 @@
 <div class="logo-container-log">
     <img src="{{ url_for('static', filename='icons/staffLogin/cybaraura2.svg') }}" alt="Логотип">
 </div>
-<form action="" class="login-form">
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="flash-messages">
+            {% for category, message in messages %}
+                <div class="flash-message {{ category }}">{{ message }}</div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
+
+<form method="POST" class="login-form">
     <legend class="login-text">ВХОД ДЛЯ СОТРУДНИКОВ</legend>
     
     <div class="name-container">
         <label for="fullname">Логин:</label>
-        <input type="text" name="username" class="name-input">
+        <input type="text" name="name" class="name-input">
     </div>
 
     <div class="password-container">
